# ChangeLog for app-admin/pwgen
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/pwgen/ChangeLog,v 1.43 2007/04/28 16:36:35 tove Exp $

  28 Apr 2007; Torsten Veller <tove@gentoo.org> pwgen-2.04.ebuild,
  pwgen-2.05.ebuild:
  Use newinitd

*pwgen-2.05 (13 Apr 2007)

  13 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org> +pwgen-2.05.ebuild:
  Version bump and closing bug #172282.

  27 Nov 2006; Timothy Redaelli <drizzt@gentoo.org> pwgen-2.04.ebuild:
  Added ~x86-fbsd keyword.

  08 Oct 2006; Fabian Groffen <grobian@gentoo.org> pwgen-2.04.ebuild:
  Dropped ~ppc-macos, see you in prefix.

  05 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> files/pwgen.rc:
  Removing the escapes in the init script. Thanks to Tim Yamin
  <plasmaroo@gentoo.org> for pointing it out.

  03 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -files/pwgen-2.03-addl_pw_chars.patch, -pwgen-2.03-r1.ebuild:
  Cleaning up older versions.

  06 Oct 2005; Michael Hanselmann <hansmi@gentoo.org> pwgen-2.04.ebuild:
  Stable on hppa.

  17 Sep 2005; Aron Griffis <agriffis@gentoo.org> pwgen-2.04.ebuild:
  Mark 2.04 stable on ia64

  14 Sep 2005; Aaron Walker <ka0ttic@gentoo.org> pwgen-2.04.ebuild:
  Stable on mips for bug #105690.

  13 Sep 2005; Markus Rothe <corsair@gentoo.org> pwgen-2.04.ebuild:
  Stable on ppc64 (bug #105690)

  12 Sep 2005; Gustavo Zacarias <gustavoz@gentoo.org> pwgen-2.04.ebuild:
  Stable on sparc wrt #105690

  12 Sep 2005; Fabian Groffen <grobian@gentoo.org> pwgen-2.04.ebuild:
  Marked stable on ppc-macos (bug #105690)

  12 Sep 2005; Joseph Jezak <josejx@gentoo.org> pwgen-2.04.ebuild:
  Marked ppc stable for bug #105690.

  12 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> pwgen-2.04.ebuild:
  Marked stable on x86 and closing bug #105690.

  12 Sep 2005; <dang@gentoo.org> pwgen-2.04.ebuild:
  Marked stable on amd64

  12 Sep 2005; Fernando J. Pereda <ferdy@gentoo.org> pwgen-2.04.ebuild: