@@ -1,7 +1,9 @@
 AUX pwgen.rc 495 RMD160 da13a35d989f3f30c1011ed43d99046fb2ddb45b SHA1 7d41e7ff51a7eae414d2dcd5187243e7fd0b66e6 SHA256 156c01a9549390112f037bbbc27bebe6e0585c975d00d2ea13314e03f3d6f6b8
 DIST pwgen-2.04.tar.gz 47276 RMD160 600a782ec2ecdf2e8b2eba4d7b35442b5fbfaee3 SHA1 968aabedd6dc984deb925d4f88252fa34cf8d9e6 SHA256 f2edeff7fe4968187201e37d84254fabceb155fadc0979a06f5643dec290b715
 DIST pwgen-2.05.tar.gz 48892 RMD160 37b0a2a9e0cec27ca177a8a52fc3519b83ff66b5 SHA1 73b34964f9f43a59b8511ce94266b7e7b5f6505e SHA256 c87a138652e0c971afb6ecefe123cb2dd686c214272d7f813901ad44db5cdda9
+DIST pwgen-2.06.tar.gz 30952 RMD160 dfb30d0c15ecd5e369309cb9fb0023c6ad1f5f32 SHA1 43dc4fbe6c3bdf96ae24b20d44c4a4584df93d8e SHA256 61598c9e3a0f7eb2e7367d4ecc71522c4f16a7d41ed31db29e3afee8d9843454
 EBUILD pwgen-2.04.ebuild 800 RMD160 3460f877f314189963b8464f2c1224aa6e77c363 SHA1 98a7028f5fbc78a998b504be6b2c6ff0df11384a SHA256 9fc97c16e0575cf05ae220e3fba7db1208e6c46964f3ae91aa1a095da00eda48
 EBUILD pwgen-2.05.ebuild 812 RMD160 c2f191a0b554ad15ad3c62549cad9924510d990d SHA1 959112aa6a96b31ff4faacd233ecb6521118e2a3 SHA256 d820ebca8f338b033e073db5700b8d68854da7c637467c3d0f4d86ed8eec8114
-MISC ChangeLog 5164 RMD160 bc6c439e6edc16fe1a13c57e09d8906fab60982a SHA1 6f578877c60d4232113cfb4ab06b092aaead0fd3 SHA256 7d57c110a073a1f11c7602097a7f3cc4670ed95b536798114d44d03f5ee4d02d
+EBUILD pwgen-2.06.ebuild 816 RMD160 5a251460868598827655d6695869c155a3d8290e SHA1 32b1a63375042e20e42b889bdad9ac0cbaa886d5 SHA256 31b0705d112dfeb24af8a8e6a3ace5e06a5b2985aea1d9cd4797065f37c31eef
+MISC ChangeLog 5374 RMD160 cc90ed53309784f90a4c227085837f07a1173297 SHA1 d99357bad0365d918db76c137fc69720ef9e6115 SHA256 8477319b9103e0ecfb1ce144214b8cad38350373e4fcd86be8e53f2dd2d20245
 MISC metadata.xml 159 RMD160 8db5ed254a6b9baf8f53368da9e71c5532a46073 SHA1 1e72098aafb1fa729eba6fc8357c7e732eb79dee SHA256 b6e17484225400d76c65d178bf5a10dc0a8da7f345993c2acc63d1093a77c90d
