@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/pwgen
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/pwgen/ChangeLog,v 1.43 2007/04/28 16:36:35 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/pwgen/ChangeLog,v 1.44 2007/11/06 22:42:30 wolf31o2 Exp $
+
+*pwgen-2.06 (06 Nov 2007)
+
+  06 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org> +pwgen-2.06.ebuild:
+  Version bump. Thanks to Raúl Porcel <armin76@gentoo.org> for pointing it
+  out. Closing bug #197222.
 
   28 Apr 2007; Torsten Veller <tove@gentoo.org> pwgen-2.04.ebuild,
   pwgen-2.05.ebuild:
